--- a/content/Device-Motion/加速度感应计.md
+++ b/content/Device-Motion/加速度感应计.md
@@ -1,13 +1,13 @@
-此API给予您的web app访问设备加速度感应器的能力。您可以获得设备在x, y, z三个方向上的加速度。
+此 API 给予您的 Web App 访问设备加速度感应器的能力。您可以获得设备在 x, y, z 三个方向上的加速度。
 
 ## 支持的平台
 * iOS (0.9.3)
 * Android (0.8.0)
 
 ## 权限
-对于hosted web app，访问此API的权限默认关闭，需要提示用户，经过授权后才能调用。
+对于 hosted web app，访问此 API 的权限默认关闭，需要提示用户，经过授权后才能调用。
 
-对于packaged web app，访问此API的权限默认开启。
+对于 packaged web app，访问此 API 的权限默认开启。
 
 ## 方法
 
@@ -40,7 +40,7 @@ navigator.accelerometer.getCurrentAcceleration(function (acceleration) {
 
 每隔一段固定的时间获取设备的加速度，每隔一段时间执行一次`accelerometerSuccess`回调。在`acceleratorOptions`对象中的`frequency`属性中指定回调周期。
 
-由这个函数直接返回的watch ID可被`navigator.accelerometer.clearWatch`用来结束监听。
+由这个函数直接返回的 watch ID 可被`navigator.accelerometer.clearWatch`用来结束监听。
 
 ```
 var watchID = navigator.accelerometer.watchAcceleration(accelerometerSuccess, accelerometerError, accelerometerOptions);
