--- a/content/了解云集运行环境.md
+++ b/content/了解云集运行环境.md
@@ -1,4 +1,4 @@
-云集是 Web App 的运行环境。基于不同的平台，云集运行环境有不同的实现。云集向符合规范的hosted Web Apps 和 packaged Web Apps 提供多种 API 支持，增强 Web App 的能力。
+云集是 Web App 的运行环境。基于不同的平台，云集运行环境有不同的实现。云集向符合规范的 hosted Web Apps 和 packaged Web Apps 提供多种 API 支持，增强 Web App 的能力。
 
 ### W3C Web App Manifest
 
@@ -6,9 +6,9 @@
 
 * 用户可以手动输入 Web App 的 Manifest 网址来添加 Web App。 （iOS 1.2.7 起）
 * 云集会匹配形如 “cloudg:// + manifest URL” 的 URL Scheme，从而引导用户添加 Web App 至云集中。（iOS 1.2.7 起）
-* 云集开发者中心为开发者生成的 Web App 的二维码展示页面（比如 http://lydiabox.com/apps/eMhKN ）会自动判断访问者的设备UA，如果为手机端的访客，则自动跳转到以上的 URL Scheme。
+* 云集开发者中心为开发者生成的 Web App 的二维码展示页面（比如 http://lydiabox.com/apps/JH2Yn ）会自动判断访问者的设备UA，如果为手机端的访客，则自动跳转到以上的 URL Scheme。
 
-但是，由于时间有限，我们暂未支持 Manifest 中的相对路径。也就是说，您的 Manifest 文件中的所有网址都必须是以 http 开头的绝对路径。目前，云集识别以下 Manifest 中的字段：
+但是，我们暂未支持 Manifest 中的相对路径。也就是说，您的 Manifest 文件中的所有网址都必须是以 http 开头的绝对路径。目前，云集识别以下 Manifest 中的字段：
 
 * name： 			应用名称
 * launch_url： 	应用网址
