--- a/content/了解云集运行环境.md
+++ b/content/了解云集运行环境.md
@@ -6,7 +6,7 @@
 
 * 用户可以手动输入 Web App 的 Manifest 网址来添加 Web App。 （iOS 1.2.7 起）
 * 云集会匹配形如 “cloudg:// + manifest URL” 的 URL Scheme，从而引导用户添加 Web App 至云集中。（iOS 1.2.7 起）
-* 云集开发者中心为开发者生成的 Web App 的二维码展示页面（比如 http://lydiabox.com/apps/JH2Yn ）会自动判断访问者的设备UA，如果为手机端的访客，则自动跳转到以上的 URL Scheme。
+* 云集开发者中心为开发者生成的 Web App 的二维码展示页面（比如 http://lydiabox.com/apps/JH2Yn ）会自动判断访问者的设备 User Agent，如果为手机端的访客，则自动跳转到以上的 URL Scheme 或 intent。
 
 但是，我们暂未支持 Manifest 中的相对路径。也就是说，您的 Manifest 文件中的所有网址都必须是以 http 开头的绝对路径。目前，云集识别以下 Manifest 中的字段：
 
@@ -59,7 +59,7 @@ function () {
 
 严格来说，云集只会绑定一个手势，那就是左边缘侧滑，因为 Safari 也用到了这个手势（应该不会有 Web App 不兼容 Safari 的吧），其余手势都会留给 Web App。
 
-默认情况下，呼出侧滑菜单的手势监听区域为整个云集。但是，如果您的 Web App 使用了 HTML5 的触摸事件，您的 Web App 的手势优先级将更高。此时，用户只能通过边缘滑动手势来呼出侧滑菜单。
+默认情况下，呼出侧滑菜单的手势监听区域为整个云集。但是，如果您的 Web App 使用了 HTML5 的触摸事件（`touchstart`, `touchmove`, `touchend`），您的 Web App 的手势优先级将更高。此时，用户只能通过边缘滑动手势来呼出侧滑菜单。
 
 ## 权限
 
