--- a/content/Plugins/社交分享.md
+++ b/content/Plugins/社交分享.md
@@ -1,4 +1,4 @@
-此 API 给予您的 Web App 社交分享的能力。您可以将一个指定的链接和内容分享至国内流行的社交平台。
+此 API 给予您的 Web app 社交分享的能力。您可以将一个指定的链接和内容分享至国内流行的社交平台。
 
 ## 方法
 
@@ -24,7 +24,7 @@ window.plugins.socialsharing.shareCurrentPage();
 
 ## shareViaWeChat
 
-此方法将允许 Web App 通过微信客户端，分享一条指定的信息给用户的微信好友。
+此方法将允许 Web app 通过微信客户端，分享一条指定的信息给用户的微信好友。
 
 ### 签名
 
@@ -57,7 +57,7 @@ window.plugins.socialsharing.shareViaWeChat(
 
 ## shareViaWeChatTimeLine
 
-此方法将允许 Web App 通过用户的微信客户端，分享一条定制的消息至用户微信朋友圈。
+此方法将允许 Web app 通过用户的微信客户端，分享一条定制的消息至用户微信朋友圈。
 
 ### 签名
 
@@ -90,7 +90,7 @@ window.plugins.socialsharing.shareViaWeChatTimeLine(
 
 ## shareViaWeibo
 
-此方法将允许 Web App 通过新浪微博 Web 端，分享一条定制的消息至用户的微博。
+此方法将允许 Web app 通过新浪微博 Web 端，分享一条定制的消息至用户的微博。
 
 ### 签名
 
