add support for react native

--- a/content/了解云集运行环境.md
+++ b/content/了解云集运行环境.md
@@ -5,7 +5,7 @@
 云集在**一定程度上支持 Manifest**，主要通过以下方式：
 
 * 用户可以手动输入 Web app 的 Manifest 网址来添加 Web app。
-* 云集会匹配形如 “cloudg:// + manifest URL” 的 URL Scheme，从而引导用户添加 Web app 至云集中。
+* 云集会匹配形如 “cloudboxone://” 的 URL Scheme，从而引导用户添加 Web app 至云集中。
 * 云集开发者中心为开发者生成的 Web App 的二维码展示页面（比如 http://developer.tinydust.cn/api/app/JH2Yn ）会自动判断访问者的设备 User Agent，如果为手机端的访客，则自动跳转到以上的 URL Scheme 或 intent。
 
 但是，我们暂未支持 Manifest 中的相对路径。也就是说，您的 Manifest 文件中的所有网址都必须是以 http 开头的绝对路径。目前，云集识别 Manifest 中的以下字段：
@@ -33,7 +33,7 @@
 }
 ```
 
-目前云集识别的服务器响应 Manifest 的 MIME Type 有：
+对于 Manifest 的类型，目前云集识别的 MIME Type 有：
 * text/plain
 * application/json
 * application/x-web-app-manifest+json
