resize png remove camera content, update introduction

--- a/content/了解云集运行环境.md
+++ b/content/了解云集运行环境.md
@@ -38,29 +38,9 @@
 * application/json
 * application/x-web-app-manifest+json
 
-### PhoneGap API
-
-云集提供的 API 的签名将最大限度地兼容 PhoneGap API，让您做到不修改或很少修改您的代码，即可让您的 Hybrid app 成功运行在云集中。
-
-### 与 PhoneGap API 的区别
-
-虽然云集提供的 API 与 PhoneGap API 函数签名一致，但实现的方式是不同的。PhoneGap 实现其 API 的方式是使用桥接的方式，通过轮询，以 JSON 指令交互的方式来实现 Native 与 WebView 的通信。而云集的做法则是直接将 Native 接口直接映射至 WebView 的 JS 上下文中。如果你尝试在控制台打印云集提供的 API，多数情况下你将会得到：
-```
-function () {
-	[native code]
-}
-```
-
-此外，一些云集提供的 API 与 PhoneGap API 不一致，原因有：
-
-1. W3C 有更加成熟的规范；
-2. 出于安全性和隐私保护的考虑，对 PhoneGap API 进行了一定的调整或删减。
-
 ## 手势
 
-严格来说，云集只会绑定一个手势，那就是左边缘侧滑，因为 Safari 也用到了这个手势（应该不会有 Web app 不兼容 Safari 的吧），其余手势都会留给 Web app。
-
-默认情况下，呼出侧滑菜单的手势监听区域为整个云集。但是，如果您的 Web App 使用了 HTML5 的触摸事件（`touchstart`, `touchmove`, `touchend`），您的 Web App 的手势优先级将更高。此时，用户只能通过边缘滑动手势来呼出侧滑菜单。
+云集浏览器只绑定了一个手势，那就是左边缘侧滑，因为 Safari 也用到了这个手势（应该不会有 Web app 不兼容 Safari 的吧），其余手势都会留给 Web app。
 
 ## 权限
 
