--- a/content/React-Native-iOS/介绍.md
+++ b/content/React-Native-iOS/介绍.md
@@ -18,7 +18,7 @@ dependencies: {
 
 ## 局限性
 
-由于架构的改变，您的 React Native app 将无法使用本地的图标资源，您必须使用诸如远程图片（http://xxx.com/xx.png）、base64 image 等方式来展现图片。除此之外，云集浏览器内置 `react-native-vector-icons` 的 `1.0.0` 版本，您可以通过这个库的来展现本地图片。
+由于架构的改变，您的 React Native app 将无法使用本地的图标资源，您必须使用诸如远程图片、base64 image 等方式来展现图片。除此之外，云集浏览器内置 `react-native-vector-icons` 的 `1.0.0` 版本，您可以通过这个库的来展现本地图片。
 
 同理，您将无法在云集浏览器中[使用需要自定义 Native libraries 的组件](https://facebook.github.io/react-native/docs/linking-libraries-ios.html)，除非云集浏览器内置了这些 Native libraries。目前云集浏览器暂时内置了以下需要用到 Native libraries 的组件：
 
