add version tip

--- a/content/React-Native-iOS/介绍.md
+++ b/content/React-Native-iOS/介绍.md
@@ -1,4 +1,4 @@
-云集浏览器内置 [facebook/react-native](https://github.com/facebook/react-native) 渲染引擎，能够正确解析 jsbundle 并进行原生界面的渲染。
+从 2.3.0 开始，云集浏览器内置 [facebook/react-native](https://github.com/facebook/react-native) 渲染引擎，能够正确解析 jsbundle 并进行原生界面的渲染。
 
 ## React Native 版本
 
